--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mchingi <mchingi@student.42.fr>            +#+  +:+       +#+         #
+#    By: welepy <welepy@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/23 01:14:20 by marcsilv          #+#    #+#              #
-#    Updated: 2025/03/14 20:17:18 by welepy           ###   ########.fr        #
+#    Updated: 2025/03/18 21:22:22 by welepy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -40,6 +40,7 @@ CUSTOM      =   ./custom_functions/ft_split.c                \
 				./custom_functions/ft_strtoll.c	\
                 ./custom_functions/get_next_line.c          \
 				./custom_functions/int_overflow.c	\
+                ./custom_functions/ft_strlen_free.c	\
                 ./custom_functions/ft_free.c          \
 
 CUSTOM_     =   ./custom_functions/length/numlen.c           \
