--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.associations": {
     "minishell.h": "c",
     "strings.h": "c",
-    "libft.h": "c"
+    "libft.h": "c",
+    "minihell.h": "c"
   },
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.cCompilerPath": "gcc",
